--- a/src/App.module.css
+++ b/src/App.module.css
@@ -17,6 +17,8 @@
   min-width: 1240px;
   max-width: 1240px;
   justify-self: center;
+  display: flex;
+  flex-direction: row;
 }
 
 .content_burger_ingredients {
