Add component IngredientDetails

--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -10,11 +10,15 @@
 }
 
 .modal {
-  width: 720px;
+  width: 800px;
   background-color: #1c1c21;
   border-radius: 15px;
 }
 
-.modal_content {
+.modal_content_with_title {
+  composes: ml-30 mr-30 mb-15 from global;
+}
+
+.modal_content_without_title {
   composes: ml-30 mr-30 mb-30 from global;
 }
