--- a/src/components/app/App.module.css
+++ b/src/components/app/App.module.css
@@ -1,31 +1,37 @@
 .app {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  height: 100vh;
+  min-height: 800px;
+  overflow: auto;
+  grid-template-rows: 88px auto;
 }
 
 .header {
   width: 100%;
-  height: 88px;
+  height: 100%;
 }
 
 .content {
+  composes: pb-4 from global;
   width: 100%;
+  overflow: hidden;
 }
 
 .container {
   width: 100%;
+  height: 100%;
   min-width: 1240px;
   max-width: 1240px;
   justify-self: center;
   display: flex;
   flex-direction: row;
+  column-gap: 40px;
 }
 
 .content_burger_ingredients {
-  composes: mr-10 from global;
-  width: 600px;
+  width: 50%;
 }
 
 .content_burger_constructor {
-  width: 600px;
+  width: 50%;
 }
