--- a/src/components/burger-constructor/burger-constructor.module.css
+++ b/src/components/burger-constructor/burger-constructor.module.css
@@ -1,6 +1,7 @@
 .burger_constructor {
   composes: pt-25 pb-10 pl-4 pr-4 from global;
   width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   gap: 16px;
@@ -15,8 +16,8 @@
   display: flex;
   flex-direction: column;
   row-gap: 16px;
-  height: 200px;
-  overflow-y: scroll;
+  min-height: 200px;
+  overflow-y: auto;
   scrollbar-color: #2f2f37 #8585ad;
   scrollbar-width: thin;
 }
