--- a/src/components/burger-ingredients/burger-ingredients.module.css
+++ b/src/components/burger-ingredients/burger-ingredients.module.css
@@ -1,7 +1,9 @@
 .component {
-  composes: mt-10 from global;
+  composes: pt-10 from global;
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .title {
@@ -18,6 +20,6 @@
   scrollbar-color: #2f2f37 #8585ad;
   scrollbar-width: thin;
   width: 100%;
-  height: 500px;
+  height: 100%;
   overflow: auto;
 }
