--- a/src/components/burger-constructor/burger-constructor.module.css
+++ b/src/components/burger-constructor/burger-constructor.module.css
@@ -16,7 +16,7 @@
   display: flex;
   flex-direction: column;
   row-gap: 16px;
-  min-height: 200px;
+  /* min-height: 200px; */
   overflow-y: auto;
   scrollbar-color: #2f2f37 #8585ad;
   scrollbar-width: thin;
