--- a/src/components/app/App.module.css
+++ b/src/components/app/App.module.css
@@ -35,3 +35,12 @@
 .content_burger_constructor {
   width: 50%;
 }
+
+.data_is_loading {
+  composes: text text_type_main-large from global;
+}
+
+.error_message {
+  composes: text text_type_main-large from global;
+  color: red;
+}
