--- a/src/pages/home-page/home-page.module.css
+++ b/src/pages/home-page/home-page.module.css
@@ -22,3 +22,12 @@
 .content_burger_constructor {
   width: 50%;
 }
+
+.data_is_loading {
+  composes: text text_type_main-large from global;
+}
+
+.error_message {
+  composes: text text_type_main-large from global;
+  color: red;
+}
