--- a/src/pages/profile-page/profile-page.module.css
+++ b/src/pages/profile-page/profile-page.module.css
@@ -25,6 +25,7 @@
   composes: mb-6 text text_type_main-medium from global;
   text-decoration: none;
   color: #666782;
+  cursor: pointer;
 }
 
 .menu_link_active {
