Show and hide buttons line on profile edit page

--- a/src/pages/profile-page/profile-page.module.css
+++ b/src/pages/profile-page/profile-page.module.css
@@ -54,8 +54,9 @@
   composes: pb-6 from global;
 }
 
-.button_line {
+.buttons_line {
   display: flex;
+  visibility: hidden;
   flex-direction: row;
   justify-content: right;
 }
